<?xml version="1.0"?>
<package format="2">
  <name>create_custom_srv</name>
  <version>0.0.0</version>
  <description>The create_custom_srv package</description>
  <maintainer email="jbot@todo.todo">schwarm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
